--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.60",
     "@types/passport-jwt": "^3.0.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mysql2": "^3.3.3",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
